fixed frontpage distortion issue

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -27,7 +27,7 @@ ion-view {
   /*border-right: 1px solid beige;*/
   color: white;
   font-size: 16px;
-  padding-top: 15px;
+  padding-top: 30px;
   /*background-color: gray;*/
   text-align: center;
 }
@@ -47,7 +47,8 @@ ion-view {
 .allSoldPhotosRepeat {
   padding: 0px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  /*height: 100%;*/
 }
 
 .backButton {
@@ -518,8 +519,7 @@ ion-view {
 }
 
 .repeatContainer {
-  /*padding-top: 55px;*/
-  /*overflow: auto;*/
+  padding: 0px;
   min-height: 100%;
 }
 
@@ -719,16 +719,12 @@ ion-view {
   width: 90%;
   height: 90%;
   margin: 5% 0 0 5%;
+  overflow: hidden;
 }
 
 .soldPhotosRepeat {
   padding: 0px;
   height: 250px;
-}
-
-.soldPhotosRepeat img {
-  height: 100%;
-  width: 100%;
 }
 
 .soldPhotosRepeat video {
@@ -739,6 +735,7 @@ ion-view {
 
 .soldPhotosRepeatContainer {
   height: auto;
+  padding: 0px;
 }
 
 .soldSign {
